Fortsatt med att få in html

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,33 @@
             <p>Be part of the mission. Send us your motivation of why just you should be the next space traveler</p>
         </div>
         <form action="">
-            
+            <label for="name"> 
+                Name
+                 <br/>
+                <input 
+                type="text"
+                name="first name"
+                id="name"
+                placeholder="type your name"
+                required>
+             </label> 
+             <br/><br/>
+            <label for="email">
+                Email
+                <br/>
+            <input
+                type="email"
+                name="emailaddress"
+                id="email"
+                placeholder=" email"
+                required>
+            </label>
+            <br/><br/>
+            <label for="message">
+                 Your message
+                 <br/>
+                 <textarea name="Text Message" id="message" cols="40" rows="5"></textarea>
+            </label> 
         </form>
     </main>
 </body>
