--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
                 </div>    
             </article>
              <article>
-                 <div class="about-mars__picture-wrapper"><img class="about-mars__picture-wrapper__item"  src="" alt="Space station"></div>
+                 <div class="about-mars__picture-wrapper"><img class="about-mars__picture-wrapper__item" src="" alt="Space station"></div>
                 <div>
-                    <h3>Just move in</h3>
-                    <p>Before carefully selected and trained crews will depart to Mars, several unmanned missions will be completed, establishing a habitable settlement waiting for the first astronauts to arrive. </p>
-                    <button>Read more</button>
+                    <h3 class="about-mars__article-wrapper__heading">Just move in</h3>
+                    <p class="about-mars__article-wrapper__text">Before carefully selected and trained crews will depart to Mars, several unmanned missions will be completed, establishing a habitable settlement waiting for the first astronauts to arrive. </p>
+                    <button class="read-more">Read more</button>
                 </div>    
             </article>
              <article>
-                 <div><img src="" alt="A sun"></div>
-                <div>
-                    <h3>Sustainable Sun</h3>
-                    <p>The Sun is a reliable, robust, and plentiful energy source. Using solar panels is the best choice for Mars One since it takes away the requirement to develop and launch a nuclear reactor, thereby saving time and money while avoiding the risks and concerns of the use of a nuclear power source.</p>
-                    <button>Read more</button>
+                 <div class="about-mars__picture-wrapper"><img class="about-mars__picture-wrapper__item" src="" alt="A sun"></div>
+                <div class="about-mars__picture-wrapper">
+                    <h3 class="about-mars__article-wrapper__heading">Sustainable Sun</h3>
+                    <p class="about-mars__article-wrapper__text">The Sun is a reliable, robust, and plentiful energy source. Using solar panels is the best choice for Mars One since it takes away the requirement to develop and launch a nuclear reactor, thereby saving time and money while avoiding the risks and concerns of the use of a nuclear power source.</p>
+                    <button class="read-more">Read more</button>
                 </div>    
             </article>
         </section>
     </main>
     <footer>
-        <div>
-            <h4>Mars One</h4>
-            <p>This site is made for educational purpose and is based on the real <span>Mars One</span> project.</p>
+        <div class="footer">
+            <h4 class="footer__heading">Mars One</h4>
+            <p class="footer__text">This site is made for educational purpose and is based on the real <span>Mars One</span> project.</p>
         </div>
     </footer>
 </body>
