--- a/faq.html
+++ b/faq.html
@@ -25,56 +25,66 @@
         </section>
     </header>
     <main>
-        <section>
+        <section class="facts">
             <h2>FAQ</h2>
-            <article>
-                <div>
-                    <h3>Why on earth would anyone move to Mars? </h3>
-                    <p>The short answer is. Because we can. Why did Columbus travel west? Why did Marco Polo head east? Because it is that pull, that unknown, that prospect of adventure that compels humans to seek new frontiers to explore.
-                        Sending a manned mission to Mars is a fantastic adventure. Imagine living on another planet, millions of miles from the Earth; looking up into the sky with the knowledge that one of the 'stars' is actually the planet you were born on. Who can even envision the incredible feeling of being the first human in history to step out of the capsule and leave your footprint on the surface of Mars? By this we implore you to not just think of that feeling for the astronaut, but the experience for all those watching back home. Those who observed Neil Armstrong land on the Moon all those years ago still remember every detail – where they were, who they were with and how they felt. The moment the first astronauts land on Mars will be our moment to remember.  
-                        A second reason is good, old-fashioned curiosity. Where did Mars come from? Can it teach us about Earth's history? Is there life on Mars? These are just three of the hundreds of burning questions for scientists all over the world.
+            <article class="facts__article">
+                <div class="facts__article facts__article__live-on-mars">
+                    <h3 class="facts__article__live-on-mars__heading">Why on earth would anyone move to Mars? </h3>
+                    <p class="facts__article__live-on-mars__text">The short answer is. Because we can. Why did Columbus travel west? 
+                        Why did Marco Polo head east? Because it is that pull, that unknown, that prospect of adventure that compels humans to seek new frontiers to explore. 
+                        </br>
+                        Sending a manned mission to Mars is a fantastic adventure. 
+                        Imagine living on another planet, millions of miles from the Earth; looking up into the sky with the knowledge that one of the 'stars' is actually the planet you were born on. 
+                        Who can even envision the incredible feeling of being the first human in history to step out of the capsule and leave your footprint on the surface of Mars? 
+                        By this we implore you to not just think of that feeling for the astronaut, but the experience for all those watching back home. 
+                        Those who observed Neil Armstrong land on the Moon all those years ago still remember every detail – where they were, who they were with and how they felt. 
+                        The moment the first astronauts land on Mars will be our moment to remember. 
+                        </br> 
+                        A second reason is good, old-fashioned curiosity. Where did Mars come from? Can it teach us about Earth's history? 
+                        Is there life on Mars? These are just three of the hundreds of burning questions for scientists all over the world.
                     </p>
                 </div>
             </article>
 
-            <article>
-                <div>
-                    <h3>Is this trip risky?</h3>
-                    <p>The trip to Mars cannot be called risk free. Like any venture in any means of travel, there are always things that could go wrong. In the case of Mars One, the following risks are conceivable:</p>
-                    <ul>
-                        <li>Accident(s) during launch</li>
-                        <li>Vital components colud malfunction</li>
-                        <li>There could be problems when landing</li>
+            <article class="facts">
+                <div class="facts-article facts-article__risks">
+                    <h3 class="facts-article__risks__heading">Is this trip risky?</h3>
+                    <p class="facts-article__risks__text">The trip to Mars cannot be called risk free. Like any venture in any means of travel, there are always things that could go wrong. In the case of Mars One, the following risks are conceivable:</p>
+                    <ul class="facts-article__risks__list">
+                        <li class="facts-article__risks__list-item">Accident(s) during launch</li>
+                        <li class="facts-article__risks__list-item">Vital components colud malfunction</li>
+                        <li class="facts-article__risks__list-item">There could be problems when landing</li>
                     </ul>
-                    <p>Although traveling to Mars will evidently bring risks, if you were to compare our mission to the first Moon mission in 1969, it quickly becomes apparent that this mission is much safer. </p>
+                    <p class="facts-article__risks__text">Although traveling to Mars will evidently bring risks, if you were to compare our mission to the first Moon mission in 1969, it quickly becomes apparent that this mission is much safer. </p>
                 </div>
             </article>
 
-            <article>
-                <div>
-                    <h3>What to do there?</h3>
-                    <p>During the working hours, the astronauts will be busy performing three main tasks: construction, maintenance and research. Besides work, they will also have time to relax.</p>
+            <article class="facts">
+                <div class="facts-article facts-article__todo">
+                    <h3 class="facts-article__todo__heading">What to do there?</h3>
+                    <p class="facts-article__todo__text">During the working hours, the astronauts will be busy performing three main tasks: construction, maintenance and research. Besides work, they will also have time to relax.</p>
                 </div>
-                <div><img src="" alt="Picture of austronaut"></div>
+                <div class="facts-article__todo__picture-wrapper"><img class="facts-article__todo__img-item" src="" alt="Picture of austronaut"></div>
             </article>
         </section>
-        <section>
-            <article>
-                <div>
-                    <h3>How long does it take to travel to Mars?</h3>
-                    <p>The trip takes around seven months; a bit longer than astronauts currently stay on the International Space Station.
+
+        <section class="far-travel-section">
+            <article class="far-travel">
+                <div class="far-travel-article">
+                    <h3 class="far-travel-article__heading">How long does it take to travel to Mars?</h3>
+                    <p class="far-travel-article__text">The trip takes around seven months; a bit longer than astronauts currently stay on the International Space Station.
                         The precise duration of each journey depends on when it is taken. Because both Mars and Earth's orbits are not perfectly circular, the time it takes to travel between them varies from six to eight months.
                         When determining the course to Mars, the maximum travel time for the astronauts is very important.
                     </p>
                 </div>
-                <div><img src="" alt="Mars and Earth orbits"></div>
+                <div class="far-travel-article__picture-wrapper"><img class="far-travel-article__img-item" src="" alt="Mars and Earth orbits"></div>
             </article>
         </section>
     </main>
     <footer>
-        <div>
-            <h4>Mars One</h4>
-            <p>This site is made for educational purpose and is based on the real <span>Mars One</span> project.</p>
+        <div class="footer">
+            <h4 class="footer__heading">Mars One</h4>
+            <p class="footer__text">This site is made for educational purpose and is based on the real <span>Mars One</span> project.</p>
         </div>
     </footer>
 </body>
