--- a/faq.html
+++ b/faq.html
@@ -10,12 +10,14 @@
 <body>
     <header>
         <nav class="navbar-head">
-            <div class="navbar-head__Logo"><img src="Logo-pic" alt="Mars One Logo"> LOGO</div>
-            <ul class="navbar-head__link-list">
-                <li class="navbar-head__link-list__link"><a href="index.html">Mars One</a></li>
-                <li class="navbar-head__link-list__link"><a class="navbar-head__link-list__link--active" href="faq.html">FAQ</a></li>
-                <li class="navbar-head__link-list__link"><a href="contact.html">Join the Crew</a></li>
+            <div class="navbar-head__Logo"><img src="Logo-pic" alt="Mars One Logo"></div>
+            <div>
+            <ul class="navbar-head__list">
+                <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="index.html">Mars One</a></li>
+                <li class="navbar-head__list__item"><a class="navbar-head__list__link navbar-head__list__link--active" href="faq.html">FAQ</a></li>
+                <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="contact.html">Join the Crew</a></li>
             </ul>
+        </div>
         </nav>
         <section class="Banner">
             <div class="Banner-faq__text-wrapper">
