Forsatt med sida ett, fått den responsiv. Börjat på sida två.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
-    <title>Document</title>
+    <title>Mars One Home</title>
 </head>
 <body>
     <header>
@@ -27,6 +27,7 @@
                     <div class="banner__line"></div>
                     <p class="banner__text-wrapper__text">Be part of the first settlement on Mars</p>
                 </div>
+                <div class="banner__overlay"></div>
             </section>
     </header>
     <main>
@@ -55,7 +56,7 @@
                     <button class="read-more">Read more</button>
                 </div>    
             </article>
-             <article class="about-mars__article">
+             <article class="about-mars__article three">
                  <div class="about-mars__picture-wrapper"><img class="about-mars__picture-wrapper__item" src="pics/solar.png" alt="A sun"></div>
                 <div class="about-mars__article-wrapper">
                     <h3 class="about-mars__article-wrapper__heading">Sustainable Sun</h3>
