--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
+    <title>Mars One Contact</title>
 </head>
 <body>
     <header>
         <nav class="navbar-head">
-            <div class="navbar-head__Logo"><img src="Logo-pic" alt="Mars One Logo"></div>
-            <div>
+            <div class="navbar-head__logo-wrapper"><img class="navbar-head__logo-wrapper__item" src="pics/logo.svg" alt="Mars One Logo"></div>
+            <div class="navbar-head__list-container">
             <ul class="navbar-head__list">
                 <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="index.html">Mars One</a></li>
                 <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="faq.html">FAQ</a></li>
