--- a/faq.html
+++ b/faq.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
+    <title>Mars One FAQ</title>
 </head>
 <body>
     <header>
         <nav class="navbar-head">
-            <div class="navbar-head__Logo"><img src="Logo-pic" alt="Mars One Logo"></div>
-            <div>
+            <div class="navbar-head__logo-wrapper"><img class="navbar-head__logo-wrapper__item" src="pics/logo.svg" alt="Mars One Logo"></div>
+            <div class="navbar-head__list-container">
             <ul class="navbar-head__list">
                 <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="index.html">Mars One</a></li>
                 <li class="navbar-head__list__item"><a class="navbar-head__list__link navbar-head__list__link--active" href="faq.html">FAQ</a></li>
@@ -19,20 +21,20 @@
             </ul>
         </div>
         </nav>
-        <section class="Banner">
-            <div class="Banner-faq__text-wrapper">
-                <h1 class="Banner-faq__text-wrapper__heading">Our next home</h1>
-                <p class="Banner-faq__text-wrapper__text">Be part of the first settlement on Mars</p>
+        <section class="banner-faq">
+            <div class="banner-faq__text-wrapper">
+                <h1 class="banner-faq__text-wrapper__heading">Our next home</h1>
+                <p class="banner-faq__text-wrapper__text">Be part of the first settlement on Mars</p>
             </div>
         </section>
     </header>
     <main>
         <section class="facts">
-            <h2>FAQ</h2>
-            <article class="facts__article">
-                <div class="facts__article facts__article__live-on-mars">
-                    <h3 class="facts__article__live-on-mars__heading">Why on earth would anyone move to Mars? </h3>
-                    <p class="facts__article__live-on-mars__text">The short answer is. Because we can. Why did Columbus travel west? 
+            <h2 class="facts__heading">FAQ</h2>
+            <article class="facts-article__live-on-mars">
+                <div class="facts-article__live-on-mars__wrapper">
+                    <h3 class="facts-article__live-on-mars__heading">Why on earth would anyone move to Mars? </h3>
+                    <p class="facts-article__live-on-mars__text">The short answer is. Because we can. Why did Columbus travel west? 
                         Why did Marco Polo head east? Because it is that pull, that unknown, that prospect of adventure that compels humans to seek new frontiers to explore. 
                         </br>
                         Sending a manned mission to Mars is a fantastic adventure. 
@@ -48,8 +50,8 @@
                 </div>
             </article>
 
-            <article class="facts">
-                <div class="facts-article facts-article__risks">
+            <article class="facts-article__risks">
+                <div class="facts-article__risks__wrapper">
                     <h3 class="facts-article__risks__heading">Is this trip risky?</h3>
                     <p class="facts-article__risks__text">The trip to Mars cannot be called risk free. Like any venture in any means of travel, there are always things that could go wrong. In the case of Mars One, the following risks are conceivable:</p>
                     <ul class="facts-article__risks__list">
@@ -61,12 +63,12 @@
                 </div>
             </article>
 
-            <article class="facts">
-                <div class="facts-article facts-article__todo">
+            <article class="facts-article__todo">
+                <div class="facts-article__todo__wrapper">
                     <h3 class="facts-article__todo__heading">What to do there?</h3>
                     <p class="facts-article__todo__text">During the working hours, the astronauts will be busy performing three main tasks: construction, maintenance and research. Besides work, they will also have time to relax.</p>
                 </div>
-                <div class="facts-article__todo__picture-wrapper"><img class="facts-article__todo__img-item" src="" alt="Picture of austronaut"></div>
+                <div class="facts-article__todo__picture-wrapper"><img class="facts-article__todo__img-item" src="pics/pictureofautsronaut.jpg" alt="Picture of austronaut"></div>
             </article>
         </section>
 
