Sida ett och två på gång.

--- a/contact.html
+++ b/contact.html
@@ -1,114 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
-    <title>Mars One Contact</title>
-</head>
-<body>
-    <header>
-        <nav class="navbar-head">
-            <div class="navbar-head__logo-wrapper"><img class="navbar-head__logo-wrapper__item" src="pics/logo.svg" alt="Mars One Logo"></div>
-            <div class="navbar-head__list-container">
-            <ul class="navbar-head__list">
-                <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="index.html">Mars One</a></li>
-                <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="faq.html">FAQ</a></li>
-                <li class="navbar-head__list__item"><a class="navbar-head__list__link navbar-head__list__link--active" href="contact.html">Join the Crew</a></li>
-            </ul>
-        </div>
-        </nav>
-        <section class="Banner">
-            <div class="Banner-contact__text-wrapper">
-                <h1 class="Banner-contact__text-wrapper__heading">Be brave, join the journey!</h1>
-                <p class="Banner-contact__text-wrapper__text">Be one of the next heroes in space </p>
-            </div>
-        </section>
-    </header>
-    <main>
-        <div>
-            <h2>Join us in the mission</h2>
-            <p>Be part of the mission. Send us your motivation of why just you should be the next space traveler</p>
-        </div>
-        <form action="">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" type="text/css" href="styles/style.css" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap"
+            rel="stylesheet"
+        />
+        <title>Mars One Contact</title>
+    </head>
+    <body>
+        <header>
+            <nav class="navbar-head">
+                <div class="navbar-head__logo-wrapper">
+                    <img
+                        class="navbar-head__logo-wrapper__item"
+                        src="pics/logo.svg"
+                        alt="Mars One Logo"
+                    />
+                </div>
+                <div class="navbar-head__list-container">
+                    <ul class="navbar-head__list">
+                        <li class="navbar-head__list__item">
+                            <a class="navbar-head__list__link" href="index.html"
+                                >Mars One</a
+                            >
+                        </li>
+                        <li class="navbar-head__list__item">
+                            <a class="navbar-head__list__link" href="faq.html"
+                                >FAQ</a
+                            >
+                        </li>
+                        <li class="navbar-head__list__item">
+                            <a
+                                class="navbar-head__list__link navbar-head__list__link--active"
+                                href="contact.html"
+                                >Join the Crew</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <section class="Banner">
+                <div class="Banner-contact__text-wrapper">
+                    <h1 class="Banner-contact__text-wrapper__heading">
+                        Be brave, join the journey!
+                    </h1>
+                    <p class="Banner-contact__text-wrapper__text">
+                        Be one of the next heroes in space
+                    </p>
+                </div>
+            </section>
+        </header>
+        <main>
             <div>
-            <label for="name"> 
-                First name
-                 <br/>
-                <input 
-                type="text"
-                name="first name"
-                id="firstname"
-                required>
-             </label> 
+                <h2>Join us in the mission</h2>
+                <p>
+                    Be part of the mission. Send us your motivation of why just
+                    you should be the next space traveler
+                </p>
             </div>
-             <br>
-             <div>
-             <label for="name"> 
-                Last name
-                 <br/>
-                <input 
-                type="text"
-                name="last name"
-                id="lastname"
-                required>
-             </label>
-            </div>
-             <br>
-             <div>
-             <label for="birthdate"> 
-                Date of Birth
-                 <br/>
-                <input 
-                type="text"
-                name="birthdate"
-                id="birthdate"
-                required>
-             </label>
-            </div>
-             <br>
-             <div>
-             <label for="profession"> 
-                Professional
-                 <br/>
-                <input 
-                type="text"
-                name="profession"
-                id="profession"
-                required>
-             </label>
-            </div>
-             <br>
-             <div>
-             <label for="primeskill"> 
-                Prime skill
-                 <br/>
-                <input 
-                type="text"
-                name="prime skill"
-                id="primeskill"
-                required>
-             </label>
-            </div>
-             <br>
-            <div>
-            <label for="message">
-                 Your message
-                 <br/>
-                 <textarea name="Text Message" id="message" cols="40" rows="5"></textarea>
-            </label> 
-            </div>
-            <div><button type="submit">Submit</button></div>
-        </form>
-    </main>
-    <footer>
+            <form action="">
+                <div>
+                    <label for="name">
+                        First name
+                        <br />
+                        <input
+                            type="text"
+                            name="first name"
+                            id="firstname"
+                            required
+                        />
+                    </label>
+                </div>
+                <br />
+                <div>
+                    <label for="name">
+                        Last name
+                        <br />
+                        <input
+                            type="text"
+                            name="last name"
+                            id="lastname"
+                            required
+                        />
+                    </label>
+                </div>
+                <br />
+                <div>
+                    <label for="birthdate">
+                        Date of Birth
+                        <br />
+                        <input
+                            type="text"
+                            name="birthdate"
+                            id="birthdate"
+                            required
+                        />
+                    </label>
+                </div>
+                <br />
+                <div>
+                    <label for="profession">
+                        Professional
+                        <br />
+                        <input
+                            type="text"
+                            name="profession"
+                            id="profession"
+                            required
+                        />
+                    </label>
+                </div>
+                <br />
+                <div>
+                    <label for="primeskill">
+                        Prime skill
+                        <br />
+                        <input
+                            type="text"
+                            name="prime skill"
+                            id="primeskill"
+                            required
+                        />
+                    </label>
+                </div>
+                <br />
+                <div>
+                    <label for="message">
+                        Your message
+                        <br />
+                        <textarea
+                            name="Text Message"
+                            id="message"
+                            cols="40"
+                            rows="5"
+                        ></textarea>
+                    </label>
+                </div>
+                <div><button type="submit">Submit</button></div>
+            </form>
+        </main>
+        <footer>
             <div class="footer">
                 <h4 class="footer__heading">Mars One</h4>
-                <p class="footer__text">This site is made for educational purpose and is based on the real <span>Mars One</span> project.</p>
+                <p class="footer__text">
+                    This site is made for educational purpose and is based on
+                    the real
+                    <span class="footer__strong">Mars One</span> project.
+                </p>
             </div>
         </footer>
-</body>
+    </body>
 </html>
