--- a/faq.html
+++ b/faq.html
@@ -1,95 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
-    <title>Mars One FAQ</title>
-</head>
-<body>
-    <header>
-        <nav class="navbar-head">
-            <div class="navbar-head__logo-wrapper"><img class="navbar-head__logo-wrapper__item" src="pics/logo.svg" alt="Mars One Logo"></div>
-            <div class="navbar-head__list-container">
-            <ul class="navbar-head__list">
-                <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="index.html">Mars One</a></li>
-                <li class="navbar-head__list__item"><a class="navbar-head__list__link navbar-head__list__link--active" href="faq.html">FAQ</a></li>
-                <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="contact.html">Join the Crew</a></li>
-            </ul>
-        </div>
-        </nav>
-        <section class="banner-faq">
-            <div class="banner-faq__text-wrapper">
-                <h1 class="banner-faq__text-wrapper__heading">Our next home</h1>
-                <p class="banner-faq__text-wrapper__text">Be part of the first settlement on Mars</p>
-            </div>
-        </section>
-    </header>
-    <main>
-        <section class="facts">
-            <h2 class="facts__heading">FAQ</h2>
-            <article class="facts-article__live-on-mars">
-                <div class="facts-article__live-on-mars__wrapper">
-                    <h3 class="facts-article__live-on-mars__heading">Why on earth would anyone move to Mars? </h3>
-                    <p class="facts-article__live-on-mars__text">The short answer is. Because we can. Why did Columbus travel west? 
-                        Why did Marco Polo head east? Because it is that pull, that unknown, that prospect of adventure that compels humans to seek new frontiers to explore. 
-                        </br>
-                        Sending a manned mission to Mars is a fantastic adventure. 
-                        Imagine living on another planet, millions of miles from the Earth; looking up into the sky with the knowledge that one of the 'stars' is actually the planet you were born on. 
-                        Who can even envision the incredible feeling of being the first human in history to step out of the capsule and leave your footprint on the surface of Mars? 
-                        By this we implore you to not just think of that feeling for the astronaut, but the experience for all those watching back home. 
-                        Those who observed Neil Armstrong land on the Moon all those years ago still remember every detail – where they were, who they were with and how they felt. 
-                        The moment the first astronauts land on Mars will be our moment to remember. 
-                        </br> 
-                        A second reason is good, old-fashioned curiosity. Where did Mars come from? Can it teach us about Earth's history? 
-                        Is there life on Mars? These are just three of the hundreds of burning questions for scientists all over the world.
-                    </p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" type="text/css" href="styles/style.css" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap"
+            rel="stylesheet"
+        />
+        <title>Mars One FAQ</title>
+    </head>
+    <body>
+        <header>
+            <nav class="navbar-head">
+                <div class="navbar-head__logo-wrapper">
+                    <img
+                        class="navbar-head__logo-wrapper__item"
+                        src="pics/logo.svg"
+                        alt="Mars One Logo"
+                    />
                 </div>
-            </article>
-
-            <article class="facts-article__risks">
-                <div class="facts-article__risks__wrapper">
-                    <h3 class="facts-article__risks__heading">Is this trip risky?</h3>
-                    <p class="facts-article__risks__text">The trip to Mars cannot be called risk free. Like any venture in any means of travel, there are always things that could go wrong. In the case of Mars One, the following risks are conceivable:</p>
-                    <ul class="facts-article__risks__list">
-                        <li class="facts-article__risks__list-item">Accident(s) during launch</li>
-                        <li class="facts-article__risks__list-item">Vital components colud malfunction</li>
-                        <li class="facts-article__risks__list-item">There could be problems when landing</li>
+                <div class="navbar-head__list-container">
+                    <ul class="navbar-head__list">
+                        <li class="navbar-head__list__item">
+                            <a class="navbar-head__list__link" href="index.html"
+                                >Mars One</a
+                            >
+                        </li>
+                        <li class="navbar-head__list__item">
+                            <a
+                                class="navbar-head__list__link navbar-head__list__link--active"
+                                href="faq.html"
+                                >FAQ</a
+                            >
+                        </li>
+                        <li class="navbar-head__list__item">
+                            <a
+                                class="navbar-head__list__link"
+                                href="contact.html"
+                                >Join the Crew</a
+                            >
+                        </li>
                     </ul>
-                    <p class="facts-article__risks__text">Although traveling to Mars will evidently bring risks, if you were to compare our mission to the first Moon mission in 1969, it quickly becomes apparent that this mission is much safer. </p>
                 </div>
-            </article>
-
-            <article class="facts-article__todo">
-                <div class="facts-article__todo__wrapper">
-                    <h3 class="facts-article__todo__heading">What to do there?</h3>
-                    <p class="facts-article__todo__text">During the working hours, the astronauts will be busy performing three main tasks: construction, maintenance and research. Besides work, they will also have time to relax.</p>
-                </div>
-                <div class="facts-article__todo__picture-wrapper"><img class="facts-article__todo__img-item" src="pics/pictureofautsronaut.jpg" alt="Picture of austronaut"></div>
-            </article>
-        </section>
-
-        <section class="far-travel-section">
-            <article class="far-travel">
-                <div class="far-travel-article">
-                    <h3 class="far-travel-article__heading">How long does it take to travel to Mars?</h3>
-                    <p class="far-travel-article__text">The trip takes around seven months; a bit longer than astronauts currently stay on the International Space Station.
-                        The precise duration of each journey depends on when it is taken. Because both Mars and Earth's orbits are not perfectly circular, the time it takes to travel between them varies from six to eight months.
-                        When determining the course to Mars, the maximum travel time for the astronauts is very important.
+            </nav>
+            <section class="banner-faq">
+                <div class="banner-faq__text-wrapper">
+                    <h1 class="banner-faq__text-wrapper__heading">
+                        Our next home
+                    </h1>
+                    <p class="banner-faq__text-wrapper__text">
+                        Be part of the first settlement on Mars
                     </p>
                 </div>
-                <div class="far-travel-article__picture-wrapper"><img class="far-travel-article__img-item" src="" alt="Mars and Earth orbits"></div>
-            </article>
-        </section>
-    </main>
-    <footer>
-        <div class="footer">
-            <h4 class="footer__heading">Mars One</h4>
-            <p class="footer__text">This site is made for educational purpose and is based on the real <span>Mars One</span> project.</p>
-        </div>
-    </footer>
-</body>
+            </section>
+        </header>
+        <main>
+            <section class="facts">
+                <h2 class="facts__heading">FAQ</h2>
+                <article class="facts-article__live-on-mars">
+                    <div class="facts-article__live-on-mars__wrapper">
+                        <h3 class="facts-article__live-on-mars__heading">
+                            Why on earth would anyone move to Mars?
+                        </h3>
+                        <p class="facts-article__live-on-mars__text">
+                            The short answer is. Because we can. Why did
+                            Columbus travel west? Why did Marco Polo head east?
+                            Because it is that pull, that unknown, that prospect
+                            of adventure that compels humans to seek new
+                            frontiers to explore.
+                            <br />
+                            Sending a manned mission to Mars is a fantastic
+                            adventure. Imagine living on another planet,
+                            millions of miles from the Earth; looking up into
+                            the sky with the knowledge that one of the 'stars'
+                            is actually the planet you were born on. Who can
+                            even envision the incredible feeling of being the
+                            first human in history to step out of the capsule
+                            and leave your footprint on the surface of Mars? By
+                            this we implore you to not just think of that
+                            feeling for the astronaut, but the experience for
+                            all those watching back home. Those who observed
+                            Neil Armstrong land on the Moon all those years ago
+                            still remember every detail – where they were, who
+                            they were with and how they felt. The moment the
+                            first astronauts land on Mars will be our moment to
+                            remember.
+                            <br />
+                            A second reason is good, old-fashioned curiosity.
+                            Where did Mars come from? Can it teach us about
+                            Earth's history? Is there life on Mars? These are
+                            just three of the hundreds of burning questions for
+                            scientists all over the world.
+                        </p>
+                    </div>
+                </article>
+
+                <article class="facts-article__risks">
+                    <div class="facts-article__risks__wrapper">
+                        <h3 class="facts-article__risks__heading">
+                            Is this trip risky?
+                        </h3>
+                        <p class="facts-article__risks__text">
+                            The trip to Mars cannot be called risk free. Like
+                            any venture in any means of travel, there are always
+                            things that could go wrong. In the case of Mars One,
+                            the following risks are conceivable:
+                        </p>
+                        <ul class="facts-article__risks__list">
+                            <li class="facts-article__risks__list-item">
+                                Accident(s) during launch
+                            </li>
+                            <li class="facts-article__risks__list-item">
+                                Vital components colud malfunction
+                            </li>
+                            <li class="facts-article__risks__list-item">
+                                There could be problems when landing
+                            </li>
+                        </ul>
+                        <p class="facts-article__risks__text">
+                            Although traveling to Mars will evidently bring
+                            risks, if you were to compare our mission to the
+                            first Moon mission in 1969, it quickly becomes
+                            apparent that this mission is much safer.
+                        </p>
+                    </div>
+                </article>
+
+                <article class="facts-article__todo">
+                    <div class="facts-article__todo__wrapper">
+                        <h3 class="facts-article__todo__heading">
+                            What to do there?
+                        </h3>
+                        <p class="facts-article__todo__text">
+                            During the working hours, the astronauts will be
+                            busy performing three main tasks: construction,
+                            maintenance and research. Besides work, they will
+                            also have time to relax.
+                        </p>
+                    </div>
+                    <div class="facts-article__todo__picture-wrapper">
+                        <img
+                            class="facts-article__todo__img-item"
+                            src="pics/pictureofautsronaut.jpg"
+                            alt="Picture of austronaut"
+                        />
+                    </div>
+                </article>
+            </section>
+
+            <section class="far-travel">
+                <article class="far-travel-article">
+                    <div class="far-travel-article__wrapper">
+                        <h3 class="far-travel-article__heading">
+                            How long does it take to travel to Mars?
+                        </h3>
+                        <p class="far-travel-article__text">
+                            The trip takes around seven months; a bit longer
+                            than astronauts currently stay on the International
+                            Space Station. The precise duration of each journey
+                            depends on when it is taken. Because both Mars and
+                            Earth's orbits are not perfectly circular, the time
+                            it takes to travel between them varies from six to
+                            eight months. When determining the course to Mars,
+                            the maximum travel time for the astronauts is very
+                            important.
+                        </p>
+                    </div>
+                    <div class="far-travel-article__picture-wrapper">
+                        <img
+                            class="far-travel-article__img-item"
+                            src=""
+                            alt="Mars and Earth orbits"
+                        />
+                    </div>
+                </article>
+            </section>
+        </main>
+        <footer>
+            <div class="footer">
+                <h4 class="footer__heading">Mars One</h4>
+                <p class="footer__text">
+                    This site is made for educational purpose and is based on
+                    the real
+                    <span class="footer__strong">Mars One</span> project.
+                </p>
+            </div>
+        </footer>
+    </body>
 </html>
