--- a/index.html
+++ b/index.html
@@ -1,76 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
-    <title>Mars One Home</title>
-</head>
-<body>
-    <header>
-        <nav class="navbar-head">
-            <div class="navbar-head__logo-wrapper"><img class="navbar-head__logo-wrapper__item" src="pics/logo.svg" alt="Mars One Logo"></div>
-            <div class="navbar-head__list-container">
-            <ul class="navbar-head__list">
-                <li class="navbar-head__list__item"><a class="navbar-head__list__link navbar-head__list__link--active" href="index.html">Mars One</a></li>
-                <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="faq.html">FAQ</a></li>
-                <li class="navbar-head__list__item"><a class="navbar-head__list__link" href="contact.html">Join the Crew</a></li>
-            </ul>
-        </div>
-        </nav>
-        <section class="banner">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" type="text/css" href="styles/style.css" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap"
+            rel="stylesheet"
+        />
+        <title>Mars One Home</title>
+    </head>
+    <body>
+        <header>
+            <nav class="navbar-head">
+                <div class="navbar-head__logo-wrapper">
+                    <img
+                        class="navbar-head__logo-wrapper__item"
+                        src="pics/logo.svg"
+                        alt="Mars One Logo"
+                    />
+                </div>
+                <div class="navbar-head__list-container">
+                    <ul class="navbar-head__list">
+                        <li class="navbar-head__list__item">
+                            <a
+                                class="navbar-head__list__link navbar-head__list__link--active"
+                                href="index.html"
+                                >Mars One</a
+                            >
+                        </li>
+                        <li class="navbar-head__list__item">
+                            <a class="navbar-head__list__link" href="faq.html"
+                                >FAQ</a
+                            >
+                        </li>
+                        <li class="navbar-head__list__item">
+                            <a
+                                class="navbar-head__list__link"
+                                href="contact.html"
+                                >Join the Crew</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <section class="banner">
                 <div class="banner__text-wrapper">
-                    <h1 class="banner__text-wrapper__heading">There is a </br> Planet B</h1>
+                    <h1 class="banner__text-wrapper__heading">
+                        There is a <br />
+                        Planet B
+                    </h1>
                     <div class="banner__line"></div>
-                    <p class="banner__text-wrapper__text">Be part of the first settlement on Mars</p>
+                    <p class="banner__text-wrapper__text">
+                        Be part of the first settlement on Mars
+                    </p>
                 </div>
                 <div class="banner__overlay"></div>
             </section>
-    </header>
-    <main>
-        <section class="mars-one__main-info">
-            <div class="mars-one__info">
-                <h2 class="mars-one__info__heading">A Brand New Sky</h2>
-                <p class="mars-one__info__text"><strong class="mars-one__info__text--bolder">Mars One </strong>aims to establish a permanent human settlement on Mars. Mars is the only planet we know of that can currently feasibly support human life and will be humankind’s first step to become a multiplanetary species. Mars One’s crews will go to Mars not to simply visit, but to live, explore, and create a second home for humanity. The first men and women to go to Mars are going there to stay.</p>
-            </div>  
-            <div class="mars-one__picture-wrapper"><img class="mars-one__picture-wrapper__item" src="https://via.placeholder.com/150" alt="Picture of Mars sky"></div>  
-        </section>
-        <section class="about-mars">
-            <h2 class="about-mars__heading">Be the earth closest neighbor</h2>
-            <article class="about-mars__article">
-                <div class="about-mars__picture-wrapper"><img class="about-mars__picture-wrapper__item" src="pics/planet-red.png" alt="Planet Mars"></div>
-                <div class="about-mars__article-wrapper">
-                    <h3 class="about-mars__article-wrapper__heading">Why Mars?</h3>
-                    <p class="about-mars__article-wrapper__text">After the Earth, Mars is the most habitable planet in our solar system due to several reasons: Its soil contains water to extract It isn’t too cold or too hot. It has an atmosphere (albeit a thin one) that offers protection from cosmic and the Sun's radiation.</p>
-                    <button class="read-more">Read more</button>
-                </div>    
-            </article>
-             <article class="about-mars__article">
-                 <div class="about-mars__picture-wrapper"><img class="about-mars__picture-wrapper__item" src="pics/base.jpg" alt="Space station"></div>
-                <div class="about-mars__article-wrapper">
-                    <h3 class="about-mars__article-wrapper__heading">Just move in</h3>
-                    <p class="about-mars__article-wrapper__text">Before carefully selected and trained crews will depart to Mars, several unmanned missions will be completed, establishing a habitable settlement waiting for the first astronauts to arrive. </p>
-                    <button class="read-more">Read more</button>
-                </div>    
-            </article>
-             <article class="about-mars__article three">
-                 <div class="about-mars__picture-wrapper"><img class="about-mars__picture-wrapper__item" src="pics/solar.png" alt="A sun"></div>
-                <div class="about-mars__article-wrapper">
-                    <h3 class="about-mars__article-wrapper__heading">Sustainable Sun</h3>
-                    <p class="about-mars__article-wrapper__text">The Sun is a reliable, robust, and plentiful energy source. Using solar panels is the best choice for Mars One since it takes away the requirement to develop and launch a nuclear reactor, thereby saving time and money while avoiding the risks and concerns of the use of a nuclear power source.</p>
-                    <button class="read-more">Read more</button>
-                </div>    
-            </article>
-        </section>
-    </main>
-    <footer>
-        <div class="footer">
-            <h4 class="footer__heading">Mars One</h4>
-            <p class="footer__text">This site is made for educational purpose and is based on the real <strong class="footer__strong">Mars One</strong> project.</p>
-        </div>
-    </footer>
-</body>
+        </header>
+        <main>
+            <section class="mars-one__main-info">
+                <div class="mars-one__info">
+                    <h2 class="mars-one__info__heading">A Brand New Sky</h2>
+                    <p class="mars-one__info__text">
+                        <strong class="mars-one__info__text--bolder"
+                            >Mars One </strong
+                        >aims to establish a permanent human settlement on Mars.
+                        Mars is the only planet we know of that can currently
+                        feasibly support human life and will be humankind’s
+                        first step to become a multiplanetary species. Mars
+                        One’s crews will go to Mars not to simply visit, but to
+                        live, explore, and create a second home for humanity.
+                        The first men and women to go to Mars are going there to
+                        stay.
+                    </p>
+                </div>
+                <div class="mars-one__picture-wrapper">
+                    <img
+                        class="mars-one__picture-wrapper__item"
+                        src="https://via.placeholder.com/150"
+                        alt="Picture of Mars sky"
+                    />
+                </div>
+            </section>
+            <section class="about-mars">
+                <h2 class="about-mars__heading">
+                    Be the earth closest neighbor
+                </h2>
+                <article class="about-mars__article">
+                    <div class="about-mars__picture-wrapper">
+                        <img
+                            class="about-mars__picture-wrapper__item"
+                            src="pics/planet-red.png"
+                            alt="Planet Mars"
+                        />
+                    </div>
+                    <div class="about-mars__article-wrapper">
+                        <h3 class="about-mars__article-wrapper__heading">
+                            Why Mars?
+                        </h3>
+                        <p class="about-mars__article-wrapper__text">
+                            After the Earth, Mars is the most habitable planet
+                            in our solar system due to several reasons: Its soil
+                            contains water to extract It isn’t too cold or too
+                            hot. It has an atmosphere (albeit a thin one) that
+                            offers protection from cosmic and the Sun's
+                            radiation.
+                        </p>
+                        <button class="read-more">Read more</button>
+                    </div>
+                </article>
+                <article class="about-mars__article">
+                    <div class="about-mars__picture-wrapper">
+                        <img
+                            class="about-mars__picture-wrapper__item"
+                            src="pics/base.jpg"
+                            alt="Space station"
+                        />
+                    </div>
+                    <div class="about-mars__article-wrapper">
+                        <h3 class="about-mars__article-wrapper__heading">
+                            Just move in
+                        </h3>
+                        <p class="about-mars__article-wrapper__text">
+                            Before carefully selected and trained crews will
+                            depart to Mars, several unmanned missions will be
+                            completed, establishing a habitable settlement
+                            waiting for the first astronauts to arrive.
+                        </p>
+                        <button class="read-more">Read more</button>
+                    </div>
+                </article>
+                <article class="about-mars__article three">
+                    <div class="about-mars__picture-wrapper">
+                        <img
+                            class="about-mars__picture-wrapper__item"
+                            src="pics/solar.png"
+                            alt="A sun"
+                        />
+                    </div>
+                    <div class="about-mars__article-wrapper">
+                        <h3 class="about-mars__article-wrapper__heading">
+                            Sustainable Sun
+                        </h3>
+                        <p class="about-mars__article-wrapper__text">
+                            The Sun is a reliable, robust, and plentiful energy
+                            source. Using solar panels is the best choice for
+                            Mars One since it takes away the requirement to
+                            develop and launch a nuclear reactor, thereby saving
+                            time and money while avoiding the risks and concerns
+                            of the use of a nuclear power source.
+                        </p>
+                        <button class="read-more">Read more</button>
+                    </div>
+                </article>
+            </section>
+        </main>
+        <footer>
+            <div class="footer">
+                <h4 class="footer__heading">Mars One</h4>
+                <p class="footer__text">
+                    This site is made for educational purpose and is based on
+                    the real
+                    <span class="footer__strong">Mars One</span> project.
+                </p>
+            </div>
+        </footer>
+    </body>
 </html>
