Sista sidans layout responsiv och klar.

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,6 @@
                         />
                     </label>
                 </div>
-                <br />
                 <div class="input__box__lastname">
                     <label for="name">
                         Last name
@@ -94,7 +93,6 @@
                         />
                     </label>
                 </div>
-                <br />
                 <div class="input__box__birthdate">
                     <label for="birthdate">
                         Date of Birth
@@ -107,7 +105,6 @@
                         />
                     </label>
                 </div>
-                <br />
                 <div class="input__box__profession">
                     <label for="profession">
                         Professional
@@ -120,7 +117,6 @@
                         />
                     </label>
                 </div>
-                <br />
                 <div class="input__box__primeskill">
                     <label for="primeskill">
                         Prime skill
@@ -133,8 +129,7 @@
                         />
                     </label>
                 </div>
-                <br />
-                <div class="input_motivation">
+                <div class="input__motivation">
                     <label for="message">
                         Your message
                         <br />
@@ -146,7 +141,11 @@
                         ></textarea>
                     </label>
                 </div>
-                <div><button type="submit">Submit</button></div>
+                <div class="input__submit">
+                    <button class="input__submit__button" type="submit">
+                        Submit
+                    </button>
+                </div>
             </form>
         </main>
         <footer>
