Fortsättning layouy och style

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <article class="about-mars__article three">
                     <div class="about-mars__picture-wrapper">
                         <img
-                            class="about-mars__picture-wrapper__item"
+                            class="about-mars__picture-wrapper__item three--picture"
                             src="pics/solar.png"
                             alt="A sun"
                         />
