fixat lite med andra bilden på första sidan del 2

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <div class="navbar-head__logo-wrapper">
                     <img
                         class="navbar-head__logo-wrapper__item"
-                        src="pics/logo.svg"
+                        src="pics/mars-one-logo-transparent.svg"
                         alt="Mars One Logo"
                     />
                 </div>
