--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,7 @@
                 <div class="navbar-head__logo-wrapper">
                     <img
                         class="navbar-head__logo-wrapper__item"
-                        src="pics/logo.svg"
+                        src="pics/mars-one-logo-transparent.svg"
                         alt="Mars One Logo"
                     />
                 </div>
@@ -136,7 +136,7 @@
                      <div class="facts-article__todo__picture-wrapper">
                         <img
                             class="facts-article__todo__img-item"
-                            src="pics/pictureofautsronaut.jpg"
+                            src="https://via.placeholder.com/150"          
                             alt="Picture of austronaut"
                         />
                     </div>
