--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="navbar-head__logo-wrapper">
                     <img
                         class="navbar-head__logo-wrapper__item"
-                        src="pics/logo.svg"
+                        src="pics/mars-one-logo-transparent.svg"
                         alt="Mars One Logo"
                     />
                 </div>
@@ -55,7 +55,6 @@
                         There is a <br />
                         Planet B
                     </h1>
-                    <div class="banner__line"></div>
                     <p class="banner__text-wrapper__text">
                         Be part of the first settlement on Mars
                     </p>
@@ -96,7 +95,7 @@
                     <div class="about-mars__picture-wrapper">
                         <img
                             class="about-mars__picture-wrapper__item"
-                            src="pics/planet-red.png"
+                            src="https://via.placeholder.com/150"
                             alt="Planet Mars"
                         />
                     </div>
@@ -115,11 +114,11 @@
                         <button class="read-more">Read more</button>
                     </div>
                 </article>
-                <article class="about-mars__article">
-                    <div class="about-mars__picture-wrapper">
+                <article class="about-mars__article-two">
+                    <div class="about-mars__picture-wrapper-two">
                         <img
-                            class="about-mars__picture-wrapper__item"
-                            src="pics/base.jpg"
+                            class="about-mars__picture-wrapper__item-two"
+                            src="https://via.placeholder.com/150"
                             alt="Space station"
                         />
                     </div>
@@ -140,7 +139,7 @@
                     <div class="about-mars__picture-wrapper">
                         <img
                             class="about-mars__picture-wrapper__item three--picture"
-                            src="pics/solar.png"
+                            src="https://via.placeholder.com/150"
                             alt="A sun"
                         />
                     </div>
