Jobbar på styling

--- a/faq.html
+++ b/faq.html
@@ -75,6 +75,7 @@
                             of adventure that compels humans to seek new
                             frontiers to explore.
                             <br />
+                            <br />
                             Sending a manned mission to Mars is a fantastic
                             adventure. Imagine living on another planet,
                             millions of miles from the Earth; looking up into
@@ -91,6 +92,7 @@
                             they were with and how they felt. The moment the
                             first astronauts land on Mars will be our moment to
                             remember.
+                            <br />
                             <br />
                             A second reason is good, old-fashioned curiosity.
                             Where did Mars come from? Can it teach us about
@@ -133,10 +135,10 @@
                 </article>
 
                 <article class="facts-article__todo">
-                     <div class="facts-article__todo__picture-wrapper">
+                    <div class="facts-article__todo__picture-wrapper">
                         <img
                             class="facts-article__todo__img-item"
-                            src="https://via.placeholder.com/150"          
+                            src="pics/pictureofautsronaut.jpg"
                             alt="Picture of austronaut"
                         />
                     </div>
@@ -151,7 +153,6 @@
                             also have time to relax.
                         </p>
                     </div>
-                   
                 </article>
             </section>
 
@@ -175,9 +176,19 @@
                     </div>
                     <div class="far-travel-article__picture-wrapper">
                         <img
-                            class="far-travel-article__img-item"
-                            src=""
-                            alt="Mars and Earth orbits"
+                            class="far-travel-article__img-item-1"
+                            src="pics/sun.png"
+                            alt="Sun"
+                        />
+                        <img
+                            class="far-travel-article__img-item-2"
+                            src="pics/mars.png"
+                            alt="Mars"
+                        />
+                        <img
+                            class="far-travel-article__img-item-3"
+                            src="pics/earth.png"
+                            alt="Earth"
                         />
                     </div>
                 </article>
