--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 </div>
                 <div class="navbar-head__list-container">
                     <ul class="navbar-head__list">
-                        <li class="navbar-head__list__item">
+                        <li
+                            class="navbar-head__list__item navbar-head__list__item--active"
+                        >
                             <a
                                 class="navbar-head__list__link navbar-head__list__link--active"
                                 href="index.html"
@@ -52,14 +54,12 @@
             <section class="banner">
                 <div class="banner__text-wrapper">
                     <h1 class="banner__text-wrapper__heading">
-                        There is a <br />
-                        Planet B
+                        There is a Planet B
                     </h1>
                     <p class="banner__text-wrapper__text">
                         Be part of the first settlement on Mars
                     </p>
                 </div>
-                <div class="banner__overlay"></div>
             </section>
         </header>
         <main>
@@ -82,7 +82,7 @@
                 <div class="mars-one__picture-wrapper">
                     <img
                         class="mars-one__picture-wrapper__item"
-                        src="https://via.placeholder.com/150"
+                        src="pics/photo-1511798616182-aab3698ac53e.jpeg"
                         alt="Picture of Mars sky"
                     />
                 </div>
@@ -95,7 +95,7 @@
                     <div class="about-mars__picture-wrapper">
                         <img
                             class="about-mars__picture-wrapper__item"
-                            src="https://via.placeholder.com/150"
+                            src="pics/planet-red.png"
                             alt="Planet Mars"
                         />
                     </div>
@@ -118,15 +118,17 @@
                     <div class="about-mars__picture-wrapper-two">
                         <img
                             class="about-mars__picture-wrapper__item-two"
-                            src="https://via.placeholder.com/150"
+                            src="pics/base.jpg"
                             alt="Space station"
                         />
                     </div>
-                    <div class="about-mars__article-wrapper">
-                        <h3 class="about-mars__article-wrapper__heading">
+                    <div class="about-mars__article-wrapper two">
+                        <h3
+                            class="about-mars__article-wrapper__heading two__heading"
+                        >
                             Just move in
                         </h3>
-                        <p class="about-mars__article-wrapper__text">
+                        <p class="about-mars__article-wrapper__text two__text">
                             Before carefully selected and trained crews will
                             depart to Mars, several unmanned missions will be
                             completed, establishing a habitable settlement
@@ -139,7 +141,7 @@
                     <div class="about-mars__picture-wrapper">
                         <img
                             class="about-mars__picture-wrapper__item three--picture"
-                            src="https://via.placeholder.com/150"
+                            src="pics/solar.png"
                             alt="A sun"
                         />
                     </div>
