fixar styling och försöker mig på animation

--- a/faq.html
+++ b/faq.html
@@ -165,13 +165,14 @@
                         <p class="far-travel-article__text">
                             The trip takes around seven months; a bit longer
                             than astronauts currently stay on the International
-                            Space Station. The precise duration of each journey
-                            depends on when it is taken. Because both Mars and
-                            Earth's orbits are not perfectly circular, the time
-                            it takes to travel between them varies from six to
-                            eight months. When determining the course to Mars,
-                            the maximum travel time for the astronauts is very
-                            important.
+                            Space Station. <br /><br />
+                            The precise duration of each journey depends on when
+                            it is taken. Because both Mars and Earth's orbits
+                            are not perfectly circular, the time it takes to
+                            travel between them varies from six to eight months.
+                            <br /><br />
+                            When determining the course to Mars, the maximum
+                            travel time for the astronauts is very important.
                         </p>
                     </div>
                     <div class="far-travel-article__picture-wrapper">
@@ -180,16 +181,20 @@
                             src="pics/sun.png"
                             alt="Sun"
                         />
-                        <img
-                            class="far-travel-article__img-item-2"
-                            src="pics/mars.png"
-                            alt="Mars"
-                        />
-                        <img
-                            class="far-travel-article__img-item-3"
-                            src="pics/earth.png"
-                            alt="Earth"
-                        />
+                        <div class="mars-orb">
+                            <img
+                                class="far-travel-article__img-item-2 mars"
+                                src="pics/mars.png"
+                                alt="Mars"
+                            />
+                        </div>
+                        <div class="earth-orb">
+                            <img
+                                class="far-travel-article__img-item-3 earth"
+                                src="pics/earth.png"
+                                alt="Earth"
+                            />
+                        </div>
                     </div>
                 </article>
             </section>
