Allt är på plats. Animation klar. Det som behöver göras nu är att se över koden.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h2 class="about-mars__heading">
                     Be the earth closest neighbor
                 </h2>
-                <article class="about-mars__article">
+                <article class="about-mars__article about-mars__article-one">
                     <div class="about-mars__picture-wrapper">
                         <img
                             class="about-mars__picture-wrapper__item"
