satt max-width på heron

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <img
                             class="about-mars__picture-wrapper__item three--picture"
                             src="pics/solar.png"
-                            alt="A sun"
+                            alt="The sun"
                         />
                     </div>
                     <div class="about-mars__article-wrapper">
